WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
263611
InteractionRegions: elements with explicitly set `border-radius` should not get the default radius
https://bugs.webkit.org/show_bug.cgi?id=263611
Summary
InteractionRegions: elements with explicitly set `border-radius` should not g...
Etienne
Reported
2023-10-24 13:35:25 PDT
InteractionRegions: elements with explicitly set `border-radius` should not get the default radius
Attachments
Add attachment
proposed patch, testcase, etc.
Etienne
Comment 1
2023-10-24 13:40:38 PDT
<
rdar://problem/116815739
>
Etienne
Comment 2
2023-10-24 13:41:09 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/19507
EWS
Comment 3
2023-10-25 02:26:19 PDT
Committed
269755@main
(e6990174db14): <
https://commits.webkit.org/269755@main
> Reviewed commits have been landed. Closing PR #19507 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug