InteractionRegions: elements with explicitly set `border-radius` should not get the default radius https://bugs.webkit.org/show_bug.cgi?id=263611 <rdar://116815739>

Reviewed by Tim Horton.

When an element has a border radius explicitly set, even when set to 0,
avoid adding the default radius to the corresponding InteractionRegion.

* Source/WebCore/page/InteractionRegion.cpp:
(WebCore::interactionRegionForRenderedRegion):
Check if the RenderStyle has an explicitly set border-radius.

* LayoutTests/interaction-region/border-radii-expected.txt:
* LayoutTests/interaction-region/border-radii.html:
Add test cases covering this change.

Canonical link: https://commits.webkit.org/269755@main